Fix duplicate icons in mobile view

--- a/style.css
+++ b/style.css
@@ -62,8 +62,8 @@ body {
 
 .toggle-reading-status-button.read,
 .toggle-reading-status-button.not-read {
-  width: 2vw;
-  height: 4vh;
+  width: 30.72px;
+  height: 30.2px;
   border-radius: 8px;
   border: none;
 }
