--- a/style.css
+++ b/style.css
@@ -94,3 +94,9 @@ form {
 form > * {
   width: 50%;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
